--- a/README
+++ b/README
@@ -1,9 +1,10 @@
-# Smart-Product-Recommendation
+                                    Smart-Product-Recommendation
+                                    
 ------------------------------Recommendation system engine-----------------
 Requirement:
 1. L(W)AMP server
-2. MySQL database name project. See the config.php file for more detail
-3. Import project.sql file to database project
+2. MySQL database name project. See the src/config.php file for more detail
+3. Import src/project.sql file to database
 4. index.php is the main executable
 5. Contain only 11 books in DB. Add much as you can through add.php file
 
@@ -28,9 +29,8 @@ search.php: 	Search the product by name only
 update.js:  	AJAX script to update page without refreshing
 -----------------------------------------------------------------------------------------------
 -------------------------------------------------------------------------------------------------
-image: 		Contain all image of product and website logo. Product image will be created automatically when adding product through add.php only.
+image: 	Contain all image of product and website logo. Product image will be created automatically when adding product through add.php only.
 js: 		all JavaScript file use in prog
 css: 		Styling and cascading of page UI.
 ----------------------------------------------------------------------------------------------
 
-NOTE: Don't rename any file. Use at own risk.
